[tool.poetry]
name = "nonebot-plugin-repeater"
version = "2.0.1"
description = "A plugin based on NoneBot2, auto +1 in groups."
authors = ["Kl1nge5"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
